--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,10 @@
 RewriteEngine On
+
 RewriteCond %{HTTPS} off 
-RewriteRule ^(.*)$ https://%{HTTP_HOST}/public/%{REQUEST_URI} 
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} 
+
+RewriteCond %{REQUEST_URI} !^/public/
+RewriteRule ^(.*)$ /public/$1 [L,QSA]
 
 # php -- BEGIN cPanel-generated handler, do not edit
 # Set the “ea-php74” package as the default “PHP” programming language.
